# nepospot

./: Cargo.toml  README.md
data/: .gitignore
generate/: Cargo.toml  README.md
generate/src/: main.rs
people/: Cargo.toml  README.md
people/src/: lib.rs
serve/: Cargo.toml  Makefile  README.md  template.yaml
serve/src/: main.rs
src/: main.rs
