[package]
name = "nepospot-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nepospot-library = { path = "../library" }
csv = "1"
lambda_http = "0.7"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
